--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,28 @@
+- old tsumino id_onpage get reused so if i have an old book in my db whose got a new id on tsumino but the old id
+    is used for a different book now -> book would get updated with data from a completely different book
+    -> also think about using internal id for thumb names
+- there shouldnt be duplicate tags in the sense of e.g. "Demong Girl | Succubus" and "Succubus",
+    since its impractical for searching
+    -> convert site tags to MangaDB tags
+- log adding tags or rather lists <- done
+    mb also log title/id_onpage+site since id doesnt help me much when db has crashed and its prob a diff id
+    -> NO, would require extra query unless i pass manga_db_entry?
+- logging in webGUI  
+- update queries for new cols/indices
+- check newly added books for dl (on production db)
+- test triggers
+- mb add parent_id field so a chapter/volume can be attributed to a larger book
+    also works rn with collection but might spam the display if there are too many chapters+books in a collection
+- mb split updating from user action vs. updating from import    
+
+
+--DONE-------------------------------------------------------------------------------------------------
+- remove NOT NULL from rating, rating_full since they are not present on different manga sites (e.g. hitomi.la, nhentai.net dont have a rating system)
+        SQLite uses dynamic typing i.e. the datatype of a value is associated with the value itself, not with its 
+        container. It does not enforce data type constraints
+        -> i can store "N/A" or sth. in rating col if i want to leave the col NOT NULL
+        => decided to remove it
+- convert multival cols using string_to_list etc.    
 - title_foreign can be duplicate e.g. (in prod. db):
     select title_foreign, count(title_foreign) from Tsumino group by title_foreign having ( count(title_foreign) > 1 );
     
@@ -16,23 +41,7 @@
     http://www.tsumino.com/Book/Info/40408/donna-ko-mo-sefri-ni-dekichau-saiminjutsu-o-te-ni-ireta-i-ve-obtained-a-hypnotic-power-that-lets-me-turn-any-girl-into-a-sex-friend
     
     etc.
-- old tsumino id_onpage get reused so if i have an old book in my db whose got a new id on tsumino but the old id
-    is used for a different book now -> book would get updated with data from a completely different book
-    -> also think about using internal id for thumb names
-- convert multival cols using string_to_list etc.    
-    
-- there shouldnt be duplicate tags in the sense of e.g. "Demong Girl | Succubus" and "Succubus",
-    since its impractical for searching
-    -> convert site tags to MangaDB tags
-- log adding tags or rather lists
-    mb also log title/id_onpage+site since id doesnt help me much when db has crashed and its prob a diff id
-- logging in webGUI  
-- update queries for new cols/indices
-- check newly added books for dl (on production db)
-- test triggers
-
-
---DONE-------------------------------------------------------------------------------------------------
+    => made title_foreign not unique
 - change Tsumino to Books in queries
 - mb replace "tsumino.com" with a nr or mb foreign key of diff table since for 2700~ entries it incread the size by 1.5MB
 - some collections have a "," in their name e.g. Anyway, I Want to Have Sex With...
