subclass of DBRow now only initializes values from data that is in db cols or joined cols implemented getting associated cols for book importing books works but adding them to db is still not implemented

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
+- check that not null fields are set (at least when saving?)
 - create indices for Tags.name, Category.name etc.?  
 - there shouldnt be duplicate tags in the sense of e.g. "Demong Girl | Succubus" and "Succubus",
     since its impractical for searching
