--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-- webGUI, search, export(but i think sqlite has export to csv integrated), cli, URLcollector
+- webGUI, search, export(but i think sqlite has export to csv integrated), cli, LinkCollector
 - webGUI: mb add some ext info to normal display like rating on ext info when displaying thumbs or collection (if it has ext info)
 - webGUI: mb dont immediately load assoc col when importing from row -> webGUI displays a lot of entries and doesnt need the cols
 - create indices for Tags.name, Category.name etc.?
@@ -9,8 +9,6 @@
 - mb add parent_id field so a chapter/volume can be attributed to a larger book
     also works rn with collection but might spam the display if there are too many chapters+books in a collection
 - split updating from user action vs. updating from import
-
-
 
 --DONE-------------------------------------------------------------------------------------------------
 - check that not null fields are set (at least when saving?)
