fixed diff_update not returning None if theres no change (due to returning new or old directly without checking if theyre nto empty) fixed not resetting changes dict after update fixed not removing value opposite change set from add/remove sets in add/remove_(assoc_col..) also now checking for empyt string and None in add/remove_(assoc_col..) and not adding it fixed not checking if ext info is downloaded in db when updating when we dont explicitly set it to 0/1 b4 it used to get overwritten when importing from extractor and saving stopped assuming value for fav/download in init since it lead to errors and saving 0 for fav/downloaded when it was acutally one 	-> better to just get an error! updating from extinfo and applying changes from page working!

--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,18 @@
-- webGUI-update-book, search, cli, LinkCollector
+- search, cli, LinkCollector
+- triggers for last_change incomplete replace with manual way
 - webGUI: mb dont immediately load assoc col when importing from row -> webGUI displays a lot of entries and doesnt need the cols
 - handle 404 error when retrieving/extracting data
 - create indices for Tags.name, Category.name etc.?
-- update queries for new cols/indices
 - check newly added books for dl (on production db)
 - test triggers
 - mb add parent_id field so a chapter/volume can be attributed to a larger book
     also works rn with collection but might spam the display if there are too many chapters+books in a collection
 - split updating from user action vs. updating from import
+- tests
 
 --DONE-------------------------------------------------------------------------------------------------
+- update queries for new cols/indices (except search)
+- webGUI-update-book
 - logging in webGUI  
 - webGUI: mb add some ext info to normal display like rating on ext info when displaying thumbs or collection (if it has ext info)
 - export(but i think sqlite has export to csv integrated -> only exports the table as is not joined)
