fixed search_normal_mult_assoc adding having count.. even if there were no assoc incl cols 	+ fixed FROM Books, with no more tables fixed searching when srchstr was true even though it might only contain invalid cols webgui search working resuming working when dling mutltiple links from linkcollector

--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
-- resume from crash, update func in MangaDB(not just webgui)(select fields to overwrite/update 
+- update func in MangaDB(not just webgui)(select fields to overwrite/update 
     always adding/updating ext_info), remove book/ext_info, limi+offset search
 - webGUI: add book, search, writeinfo, fix leftmost button when small screen, display rating/my_rating, pages,
     placeholder for cover, add/change cover when editing
