--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,8 @@
 - update func in MangaDB(not just webgui)(select fields to overwrite/update 
     always adding/updating ext_info), rlimi+offset search
 - thread/subprocess for network stuff
-- webGUI: display rating/my_rating
+- resize imgs to 400px width but crop too wide imgs
+    (original height / original width) x new width = new height
 - check for dupl urls/idonpage when adding extinfo! + give warning when importing and idonpage is duplicate?
 - safeguard against external link now linking to a different manga when updating!
 - triggers for last_change incomplete replace with manual way
