started adding identity map

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,36 @@
+- change offset queries to use keyset pagination -> store last(displayed)id in webgui, also get one more row than needed to check if we have a next page
+- implement identity map
+    have a func that handles turning row into object
+        check if in id map
+            refresh attributes from row
+        if not in id create new instance and populate them from row
+        sqlalchemy uses instance dict to set values on instance (see loading.py->_populate_full/_partial) using populators -> (attr name, operator.itemgetter(id in row)) tuples to set instance_dict[attr name] = getter(row)
+            several diff types of populators
+            ...
+            also differentiates between quick populators -> normal columns (further diffs between deferred cols etc.)
+            and populators for relationships etc. that might be lazy loaded
+            
+                loading techniques:
+                The loading of relationships falls into three categories; lazy loading, eager loading, and no loading. Lazy 
+                loading refers to objects are returned from a query without the related objects loaded at first. When the 
+                given collection or reference is first accessed on a particular object, an additional SELECT statement is 
+                emitted such that the requested collection is loaded.
+
+                Eager loading refers to objects returned from a query with the related collection or scalar reference 
+                already loaded up front. The Query achieves this either by augmenting the SELECT statement it would normally 
+                emit with a JOIN to load in related rows simultaneously, or by emitting additional SELECT statements after 
+                the primary one to load collections or scalar references at once.
+
+                “No” loading refers to the disabling of loading on a given relationship, either that the attribute is empty 
+                and is just never loaded, or that it raises an error when it is accessed, in order to guard against unwanted 
+                lazy loads.
+                
+                ___
+                
+                -> either leaves assoc col alone if theyre lazy loaded
+                -> or loads them if theyre eager loaded
+                
+
 - thread/subprocess for network stuff
 - webGUI: mb dont immediately load assoc col when importing from row -> webGUI displays a lot of entries and doesnt need the cols
 - create indices for Tags.name, Category.name etc.? + Books.title?
