--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,5 @@
 - change offset queries to use keyset pagination -> store last(displayed)id in webgui, also get one more row than needed to check if we have a next page
+    or mb even 2 more rows and grab the ten in the middle to know if prev/next btn needed?
 - implement identity map
     have a func that handles turning row into object
         check if in id map
@@ -29,6 +30,8 @@
                 
                 -> either leaves assoc col alone if theyre lazy loaded
                 -> or loads them if theyre eager loaded
+- use descriptors to represent columns
+- store commited values in id_map/session...                
                 
 
 - thread/subprocess for network stuff
